Changed the layout of education and certifications

--- a/index.html
+++ b/index.html
@@ -828,98 +828,128 @@
   <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
     <div class="w-100">
       <h2 class="mb-5">Education</h2>
-
-      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-        <div class="resume-content">
-          <h3 class="mb-0">7 Gate Academy</h3>
-          <div class="subheading mb-3">Machine Learning Bootcamp&ensp;<a href="https://7gate.academy/"
-              target="_blank">[link]</a></div>
-          <div>I was <span class="marker">selected</span> the last 7 students who allowed to join the class <span
-              class="marker">from 120
-              candidates</span> in selection
-            process.
-            <p></p>
-            <span class="marker">Curriculum</span><br>
-            8 weeks, 3.5 hours * 4 days/week.<br>
-            1st week: Data Engineering, Modeling, BigData (ETL, DWH, Airflow, Spark)<br>
-            2nd week: Data Visualization (Matplotlib), Data Processing (Duplicated rows, Missing Values, Outliers,
-            Multiple Value Ranges, Non-numerical Data)<br>
-            3rd week: AutoML (Google Cloud, Microsoft Azure), ML Library (sklearn)<br>
-            4th week: MVP, Interpretability, Problem-solving, ML Technics (Bias, Variance, Regularization, etc)<br>
-            5th week: Planning and estimating the work, Data Science Scrum<br>
-            6th week: Team Project<br>
-            7th week: Team Project<br>
-            8th week: Presentation about the team project, <span class="marker"><a href="https://ticket-dodger.com/"
-                target="_blank">Ticket-Dodger</span></a>
+      <!-- An education section start -->
+      <div class="col-sm-12 mb-2">
+        <div class="card">
+          <div class=" card-body">
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Aug 2019 - Sep 2019</span>
+            </div>
+            <div class="resume-content">
+              <h3 class="mb-0">7 Gate Academy</h3>
+              <div class="subheading mb-3">Machine Learning Bootcamp&ensp;<a href="https://7gate.academy/"
+                  target="_blank">[link]</a></div>
+              <div>I was <span class="marker">selected</span> the last 7 students who allowed to join the class <span
+                  class="marker">from 120
+                  candidates</span> in selection
+                process.
+                <p></p>
+                <span class="marker">Curriculum</span><br>
+                8 weeks, 3.5 hours * 4 days/week.<br>
+                1st week: Data Engineering, Modeling, BigData (ETL, DWH, Airflow, Spark)<br>
+                2nd week: Data Visualization (Matplotlib), Data Processing (Duplicated rows, Missing Values, Outliers,
+                Multiple Value Ranges, Non-numerical Data)<br>
+                3rd week: AutoML (Google Cloud, Microsoft Azure), ML Library (sklearn)<br>
+                4th week: MVP, Interpretability, Problem-solving, ML Technics (Bias, Variance, Regularization,
+                etc)<br>
+                5th week: Planning and estimating the work, Data Science Scrum<br>
+                6th week: Team Project<br>
+                7th week: Team Project<br>
+                8th week: Presentation about the team project, <span class="marker"><a href="https://ticket-dodger.com/"
+                    target="_blank">Ticket-Dodger</span></a>
+              </div>
+              <p></p>
+            </div>
           </div>
-          <p></p>
-        </div>
-        <div class="resume-date text-md-right">
-          <span class="text-primary">Jul 2019 - Sep 2019</span>
         </div>
       </div>
+      <!-- An education is done -->
 
-      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-        <div class="resume-content">
-          <h3 class="mb-0">Institute of Technology Development of Canada</h3>
-          <div class="subheading mb-3">Computer Science Diploma&ensp;<a href="https://itdcanada.ca/"
-              target="_blank">[link]</a>&nbsp;&nbsp;<a href="docs/Kohei_Suzuki-Final_Transcript.pdf"
-              target="_blank">[See
-              transcription]</a></div>
-          <p>The course was 2 years diploma in Open Source Programming which contains one year in class and the
-            secound year for Coop program. I worked as a Machine Learning Developer at <a href="#experience">Singular
-              Software
-              Inc</a>.</p>
-        </div>
-        <div class="resume-date text-md-right">
-          <span class="text-primary">Jul 2017 - Jun 2019</span>
-        </div>
-      </div>
+      <p>&ensp;</p>
 
-      <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-        <div class="resume-content">
-          <h3 class="mb-0">Brain Station Vancouver</h3>
-          <div class="subheading mb-3">Data Science Bootcamp&ensp;<a href="https://brainstation.io/campus/vancouver"
-              target="_blank">[link]</a>&nbsp;&nbsp;<a href="docs/BrainStation_Certificate.pdf" target="_blank">[See
-              certificate]</a></div>
-          <div>
-            <span class="marker">Curriculum</span><br>
-            -&ensp;UNIT 1 Python Programming<br>
-            &ensp;&ensp;Programming Fundamentals, Pandas, Python Packages<br><br>
-            -&ensp;UNIT 2 Working with Data<br>
-            &ensp;&ensp;Importing, Cleaning, Sampling<br><br>
-            -&ensp;UNIT 3 Data Visualization<br>
-            &ensp;&ensp;Matplotlib, Bokeh, Model Visualizations<br><br>
-            -&ensp;UNIT 4 Numerical Models<br>
-            &ensp;&ensp;Linear Regression, Polynomial Regression<br><br>
-            -&ensp;UNIT 5 Classification Models<br>
-            &ensp;&ensp;Logistic Regression, Naive Bayes, Decision Trees<br><br>
-            -&ensp;UNIT 6 Model Validation<br>
-            &ensp;&ensp;Distribution Fitting, Testing Goodness of Fit, Training Models<br><br>
-            -&ensp;UNIT 7 Machine Learning<br>
-            &ensp;&ensp;Intro to Neural Networks, Intro to Random Forests<br><br>
-            -&ensp;UNIT 8 Presenting Data<br>
-            &ensp;&ensp;Storytelling with Data, Project Presentation<br><br>
+      <!-- An education start -->
+      <div class="col-sm-12 mb-2">
+        <div class="card">
+          <div class=" card-body">
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Jul 2017 - Sep 2019</span>
+            </div>
+            <div class="resume-content">
+              <h3 class="mb-0">Institute of Technology Development of Canada</h3>
+              <div class="subheading mb-3">Computer Science Diploma&ensp;<a href="https://itdcanada.ca/"
+                  target="_blank">[link]</a>&nbsp;&nbsp;<a href="docs/Kohei_Suzuki-Final_Transcript.pdf"
+                  target="_blank">[See
+                  transcription]</a></div>
+              <p>The course was 2 years diploma in Open Source Programming which contains one year in class and the
+                secound year for Coop program. I worked as a Machine Learning Developer at <a
+                  href="#experience">Singular
+                  Software
+                  Inc</a>.</p>
+            </div>
           </div>
-          <p></p>
-        </div>
-        <div class="resume-date text-md-right">
-          <span class="text-primary">Apr 2018 - Jun 2018</span>
         </div>
       </div>
+      <!-- An education is done -->
 
-      <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-        <div class="resume-content">
-          <h3 class="mb-0">Tokyo City University</h3>
-          <div class="subheading mb-3">Bachelor Degree in Computer Science&ensp;<a href="https://www.tcu.ac.jp/english/"
-              target="_blank">[link]</a></div>
-          <p>Matriculated</p>
-        </div>
-        <div class="resume-date text-md-right">
-          <span class="text-primary">Apr 2012 - Apr 2013</span>
+      <p>&ensp;</p>
+
+      <!-- An Education start -->
+      <div class="col-sm-12 mb-2">
+        <div class="card">
+          <div class=" card-body">
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Apr 2018 - Jun 2018</span>
+            </div>
+            <div class="resume-content">
+              <h3 class="mb-0">Brain Station Vancouver</h3>
+              <div class="subheading mb-3">Data Science Bootcamp&ensp;<a href="https://brainstation.io/campus/vancouver"
+                  target="_blank">[link]</a>&nbsp;&nbsp;<a href="docs/BrainStation_Certificate.pdf" target="_blank">[See
+                  certificate]</a></div>
+              <div>
+                <span class="marker">Curriculum</span><br>
+                -&ensp;UNIT 1 Python Programming<br>
+                &ensp;&ensp;Programming Fundamentals, Pandas, Python Packages<br><br>
+                -&ensp;UNIT 2 Working with Data<br>
+                &ensp;&ensp;Importing, Cleaning, Sampling<br><br>
+                -&ensp;UNIT 3 Data Visualization<br>
+                &ensp;&ensp;Matplotlib, Bokeh, Model Visualizations<br><br>
+                -&ensp;UNIT 4 Numerical Models<br>
+                &ensp;&ensp;Linear Regression, Polynomial Regression<br><br>
+                -&ensp;UNIT 5 Classification Models<br>
+                &ensp;&ensp;Logistic Regression, Naive Bayes, Decision Trees<br><br>
+                -&ensp;UNIT 6 Model Validation<br>
+                &ensp;&ensp;Distribution Fitting, Testing Goodness of Fit, Training Models<br><br>
+                -&ensp;UNIT 7 Machine Learning<br>
+                &ensp;&ensp;Intro to Neural Networks, Intro to Random Forests<br><br>
+                -&ensp;UNIT 8 Presenting Data<br>
+                &ensp;&ensp;Storytelling with Data, Project Presentation<br><br>
+              </div>
+              <p></p>
+            </div>
+          </div>
         </div>
       </div>
+      <!-- An Education end -->
 
+      <p>&ensp;</p>
+
+      <!-- An education start -->
+      <div class="col-sm-12 mb-2">
+        <div class="card">
+          <div class=" card-body">
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Apr 2012 - Apr 2013</span>
+            </div>
+            <div class="resume-content">
+              <h3 class="mb-0">Tokyo City University</h3>
+              <div class="subheading mb-3">Bachelor Degree in Computer Science&ensp;<a
+                  href="https://www.tcu.ac.jp/english/" target="_blank">[link]</a></div>
+              <p>Matriculated</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- An education is done -->
     </div>
   </section>
 
@@ -933,6 +963,7 @@
       <ul class="fa-ul mb-5">
         <li>
           <p>
+            <hr>
           <div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Mar 2020 - No Expiration Date</span>
@@ -941,6 +972,7 @@
               target="_blank"><span class="marker">Reinforcement Learning Specialization</span></a><br>
             &ensp;&ensp;Organization: Coursera<br>
           </div>
+          <hr>
           <div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Dec 2019 - No Expiration Date</span>
@@ -950,6 +982,7 @@
                 in Practice Specialization</span></a><br>
             &ensp;&ensp;Organization: Coursera<br>
           </div>
+          <hr>
           <div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Dec 2019 - No Expiration Date</span>
@@ -958,6 +991,7 @@
                 class="marker">Sequences, Time Series and Prediction</span></a><br>
             &ensp;&ensp;Organization: Coursera<br>
           </div>
+          <hr>
           <div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Dec 2019 - No Expiration Date</span>
@@ -966,6 +1000,7 @@
                 class="marker">Natural Language Processing in TensorFlow</span></a><br>
             &ensp;&ensp;Organization: Coursera<br>
           </div>
+          <hr>
           <div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Nov 2019 - No Expiration Date</span>
@@ -974,6 +1009,7 @@
                 class="marker">Convolutional Neural Networks in TensorFlow</span></a><br>
             &ensp;&ensp;Organization: Coursera<br>
           </div>
+          <hr>
           <div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Nov 2019 - No Expiration Date</span>
@@ -983,6 +1019,7 @@
                 Learning, and Deep Learning</span></a><br>
             &ensp;&ensp;Organization: Coursera<br>
           </div>
+          <hr>
           <div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Nov 2018 - No Expiration Date</span>
@@ -991,6 +1028,7 @@
                 class="marker">Databases and SQL for Data Science</span></a><br>
             &ensp;&ensp;Organization: Coursera<br>
           </div>
+          <hr>
           <div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Oct 2018 - No Expiration Date</span>
@@ -999,6 +1037,7 @@
               target="_blank"><span class="marker">Deep Learning Specialization</span></a><br>
             &ensp;&ensp;Organization: Coursera<br>
           </div>
+          <hr>
           <div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Oct 2018 - No Expiration Date</span>
@@ -1007,6 +1046,7 @@
                 class="marker">Sequence Models</span></a><br>
             &ensp;&ensp;Organization: Coursera<br>
           </div>
+          <hr>
           <div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Sep 2018 - No Expiration Date</span>
@@ -1015,6 +1055,7 @@
                 class="marker">Convolutional Neural Networks</span></a><br>
             &ensp;&ensp;Organization: Coursera<br>
           </div>
+          <hr>
           <div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Sep 2018 - No Expiration Date</span>
@@ -1024,6 +1065,7 @@
                 Regularization and Optimization</span></a><br>
             &ensp;&ensp;Organization: Coursera<br>
           </div>
+          <hr>
           <div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Sep 2018 - No Expiration Date</span>
@@ -1032,6 +1074,7 @@
                 class="marker">Neural Networks and Deep Learning</span></a><br>
             &ensp;&ensp;Organization: Coursera<br>
           </div>
+          <hr>
           <div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Sep 2018 - No Expiration Date</span>
@@ -1040,6 +1083,7 @@
                 class="marker">Structuring Machine Learning Projects</span></a><br>
             &ensp;&ensp;Organization: Coursera<br>
           </div>
+          <hr>
           <div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Sep 2018 - No Expiration Date</span>
@@ -1048,6 +1092,7 @@
                 class="marker">Machine Learning</span></a><br>
             &ensp;&ensp;Organization: Coursera<br>
           </div>
+          <hr>
           </p>
         </li>
       </ul>
