Added a new row in the result section of version 2 for imgs of profit

--- a/index.html
+++ b/index.html
@@ -469,6 +469,15 @@
                   <th>2020/May/25 - 2020/May/30</th>
                 </tr>
                 <tr>
+                  <td>Profit</td>
+                  <td>
+                    <img src="img/bk_profit_20200610_2_model960_week4.png" class="img-fluid" alt="Responsive image">
+                  </td>
+                  <td>
+                    <img src="img/bk_profit_20200610_2_model960_week5.png" class="img-fluid" alt="Responsive image">
+                  </td>
+                </tr>
+                <tr>
                   <td>Number of trading</td>
                   <td>
                     117
