Make things clean such as responsible

--- a/index.html
+++ b/index.html
@@ -131,11 +131,8 @@
           <a href="mailto:koheisuzuki808@gmail.com">koheisuzuki808@gmail.com</a>&emsp;|&emsp;
           <a href="docs/koheisuzuki_resume2020_ver1.0.pdf" target="_blank" id="resume">Download CV</a>
         </div>
-        <p class="lead mb-5">
-          <!-- I went to two coding bootcamps where I learned wide ranges of machine learning and data science technics, and
-          I always try to gain knowledge through MOOCs, reading blog posts and papers, and working on projects.<br> -->
-        <blockquote class="blockquote blockquote-custom bg-white p-5 shadow rounded">
-          <p class="mb-0 mt-2 font-italic">
+        <blockquote class="blockquote blockquote-custom bg-white p-4 shadow rounded">
+          <p class="mb-2 mt-2 font-italic">
             A<span class="marker"> machine
               learning engineer</span> in the Vancouver area with more than <span class="marker">2 years of machine
               learning experience</span>.<br>
@@ -148,20 +145,22 @@
             starts <span class="marker">from Aug 2020</span>.<br>
           </p>
         </blockquote>
-        <br>
         <p>
         <h4><span class="text-primary">
             Main skills
           </span></h4>
-        - <span class="marker">Programming Laguage</span>:<br>
-        &ensp;Python (TensorFlow, PyTroch, Pandas, Numpy, Matplotlib, Sklearn, Jupyter Notebook, Tensorforce, SCipy,
-        Flask), C/C++, SQL, Java, Bash<br>
-        - <span class="marker">Machine Learning</span>: Computer Vision, NLP, Time Series, Reinforcement Learning,
-        Classic machine learning<br>
-        - <span class="marker">OS</span>: Ubuntu, MacOS<br>
-
-
-        - <span class="marker">Others</span>: AWS(EC2, DynamoDB, CloudWatch), Github, Algorithms and Data structures
+        <ul>
+          <li><span class="marker">Programming Laguage</span>:</li>Python (TensorFlow, PyTroch, Pandas, Numpy,
+          Matplotlib, Sklearn, Jupyter
+          Notebook, Tensorforce, SCipy,
+          Flask), C/C++, SQL, Java, Bash
+          <li><span class="marker">Machine Learning</span>: </li>Computer Vision, NLP, Time Series, Reinforcement
+          Learning,
+          Classic machine learning
+          <li><span class="marker">OS</span>: </li>Ubuntu, MacOS
+          <li><span class="marker">Others</span>: </li>AWS(EC2, DynamoDB, CloudWatch), Github, Algorithms and Data
+          structures
+        </ul>
         </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/koheisuzuki" target="_blank">
@@ -247,9 +246,13 @@
                   <hr>
                   <h5>Technics</h5>
                   <p>
-                    - Python: TensorFlow, Numpy, Scipy, Matplotlib, Seaborn, Bokeh, Flask, Jupyter Notebook,
-                    Pandas<br>
-                    - Others: Ubuntu, Git, SQLite, Scrum, SSH, Anaconda, JavaScript</p>
+                  <ul>
+                    <li><span class="marker">Python</span>: </li>TensorFlow, Numpy, Scipy, Matplotlib, Seaborn, Bokeh,
+                    Flask, Jupyter Notebook,
+                    Pandas
+                    <li><span class="marker">Others</span>: </li>Ubuntu, Git, SQLite, Scrum, SSH, Anaconda, JavaScript
+                  </ul>
+                  </p>
                 </div>
               </div>
             </div>
@@ -270,13 +273,10 @@
   <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
     <div class="w-100">
       <h2 class="mb-5">Projects</h2>
-      <!-- <p>All project source codes can be found in my <a href="https://github.com/RainBoltz" target="_blank"><i
-              class="fab fa-github"></i> GITHUB</a></p> -->
       <div class="row">
         <!-- A project section start -->
         <div class="col-sm-12 mb-2">
           <div class="card">
-            <!--<img class="card-img-top" src="img/profile.jpg" alt="loading...">-->
             <div class="card-body">
               <div class="resume-date text-md-right">
                 <span class="text-primary">Jan 2020 - Present</span>
@@ -291,17 +291,17 @@
                   on the real financial market while I am sleeping.</span> </p>
 
               About this project can be separated into two sections, MVP and version 2.0.<br>
-              - <span class="marker">In MVP section</span>, I will introduce you what I had done and the result I got
-              from the first deep
-              reinforcement learning model.<br>
-              - <span class="marker">In version 2.0 section</span>, I will mention what I changed, especially
-              preprocessing in order to make a
-              better model and will show you improved results.
+              <ul>
+                <li><span class="marker">In MVP section</span>: </li>I will introduce you what I had done and the result
+                I got from the first deep reinforcement learning model.
+                <li><span class="marker">In version 2.0 section</span>: </li>I will mention what I changed, especially
+                preprocessing in order to make a better model and will show you improved results.
+              </ul>
               <hr>
 
               <h4>MVP</h4>
               First, I will list up key parts in MVP that I finished almost within a month and then I will add
-              explanation to each of them.<br><br>
+              explanation to each of them.<br>
               <ol>
                 <li>SureFireStrategy</li>
                 <li>Gramian Angular Field</li>
@@ -462,67 +462,73 @@
                 </div>
               </div>
               <hr>
-              <table width="100%" cellpadding="10" border="1">
-                <tr>
-                  <th></th>
-                  <th>2020/May/18 - 2020/May/23</th>
-                  <th>2020/May/25 - 2020/May/30</th>
-                </tr>
-                <tr>
-                  <td>Profit</td>
-                  <td>
-                    <img src="img/bk_profit_20200610_2_model960_week4.png" class="img-fluid" alt="Responsive image">
-                  </td>
-                  <td>
-                    <img src="img/bk_profit_20200610_2_model960_week5.png" class="img-fluid" alt="Responsive image">
-                  </td>
-                </tr>
-                <tr>
-                  <td>Number of trading</td>
-                  <td>
-                    117
-                  </td>
-                  <td>
-                    105
-                  </td>
-                </tr>
-                <tr>
-                  <td>Number of winning</td>
-                  <td>86</td>
-                  <td>79</td>
-                </tr>
-                <tr>
-                  <td>Number of losing</td>
-                  <td>31</td>
-                  <td>26</td>
-                </tr>
-                <tr>
-                  <td>Winning ratio</td>
-                  <td>0.735</td>
-                  <td>0.752</td>
-                </tr>
-                <tr>
-                  <td>Profit Factor</td>
-                  <td>1.515</td>
-                  <td>1.820</td>
-                </tr>
-                <tr>
-                  <td>Max DrawDown</td>
-                  <td>-40pips</td>
-                  <td>-50pips</td>
-                </tr>
-                <tr>
-                  <td>Net Profit</td>
-                  <td>217.7pips</td>
-                  <td>225.0pips</td>
-                </tr>
-              </table>
+              <div class="table-responsive">
+                <table width="100%" cellpadding="10" border="1" class="table table-striped">
+                  <tr>
+                    <th></th>
+                    <th>2020/May/18 - 2020/May/23</th>
+                    <th>2020/May/25 - 2020/May/30</th>
+                  </tr>
+                  <tr>
+                    <td>Profit</td>
+                    <td>
+                      <img src="img/bk_profit_20200610_2_model960_week4.png" class="img-fluid" alt="Responsive image">
+                    </td>
+                    <td>
+                      <img src="img/bk_profit_20200610_2_model960_week5.png" class="img-fluid" alt="Responsive image">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>Number of trading</td>
+                    <td>
+                      117
+                    </td>
+                    <td>
+                      105
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>Number of winning</td>
+                    <td>86</td>
+                    <td>79</td>
+                  </tr>
+                  <tr>
+                    <td>Number of losing</td>
+                    <td>31</td>
+                    <td>26</td>
+                  </tr>
+                  <tr>
+                    <td>Winning ratio</td>
+                    <td>0.735</td>
+                    <td>0.752</td>
+                  </tr>
+                  <tr>
+                    <td>Profit Factor</td>
+                    <td>1.515</td>
+                    <td>1.820</td>
+                  </tr>
+                  <tr>
+                    <td>Max DrawDown</td>
+                    <td>-40pips</td>
+                    <td>-50pips</td>
+                  </tr>
+                  <tr>
+                    <td>Net Profit</td>
+                    <td>217.7pips</td>
+                    <td>225.0pips</td>
+                  </tr>
+                </table>
+              </div>
               <br>
               <h5>Further work</h5>
               <ol>
+                <li><span class="marker">Solve overfitting</span>: </li>As we can see the entry points plots above, the
+                amount of entry points for short is much more than it is for long. This is becaouse of the training data
+                I used has several downtrends that could cause overfitting problem. We can solve this by increasing the
+                amount of training data, especially data that has uptrends.
                 <li>Use heatmap images as extra features.</li>
-                <li>Use Fourier transform to approximate the price movement and calculate derivatives as features that
-                  may be thought of the strength of the current trend.</li>
+                <li>Use Fourier transform to approximate the price movement and calculate derivatives that are used as
+                  features that may be thought of the strength of the current trend.</li>
                 <li>Implement algorithmic trading strategies and use their outputs as features with one-hot encoding.
                 </li>
                 <li>Update the reward function which is one of the crucial parts in reinforcement learning.</li>
@@ -709,20 +715,27 @@
               <span class="marker">Due to model's performance and inference time, 28.19 [ms], we choose XGBoost
                 model</span>.<br><br>
               <h5>Application Archtecture</h5>
+
               <strong>Backend</strong><br>
-              &ensp;&ensp;- Server: Flask running behind Gunicorn, and NGinx<br>
-              &ensp;&ensp;- Custom built location to street matching engine<br>
-              &ensp;&ensp;- XGBoost<br>
-              &ensp;&ensp;- Deployment: DigitalOcean Droplet<br>
-              &ensp;&ensp;&ensp;&ensp;- 1 vCPU<br>
-              &ensp;&ensp;&ensp;&ensp;- 1 GB RAM<br>
-              &ensp;&ensp;&ensp;&ensp;- 24 GB SSD<br>
-              &ensp;&ensp;&ensp;&ensp;- ($5 a month)<br>
+              <ul>
+                <li>Server: </li>Flask running behind Gunicorn, and NGinx
+                <li>Custom built location to street matching engine</li>
+                <li>Model: </li>XGBoost
+                <li>Deployment: DigitalOcean Droplet
+                  <ul>
+                    <li>1 vCPU</li>
+                    <li>1 GB RAM</li>
+                    <li>24 GB SSD</li>
+                  </ul>
+                </li>
+              </ul>
               <strong>Client Side</strong><br>
-              &ensp;&ensp;- Website: HTML and Javascript<br>
-              &ensp;&ensp;- Map: LeafletJS serving OpenStreetMap (No google!)<br>
-              &ensp;&ensp;- Deployment: Github Pages<br>
-              &ensp;&ensp;&ensp;&ensp;- Free<br><br>
+              <ul>
+                <li>Website: </li>HTML and Javascript
+                <li>Map: </li>LeafletJS serving OpenStreetMap (No google!)
+                <li>Deployment: </li>Github Pages
+              </ul>
+
               <h5>How did we work as a team</h5><br>
               Since we lived a little bit far to work together in person, it was <span class="marker">important that
                 we had a good system
@@ -740,18 +753,18 @@
               We made sure we reviewed each others work to the standards that we set out for ourselves.
               To do so we used <span class="marker">Trello to manage our tasks</span>. Here are the some of the tags
               we had in our channel on
-              Trello.<br>
-              &ensp;&ensp;- Product backlog<br>
-              &ensp;&ensp;- Current sprint<br>
-              &ensp;&ensp;- Doing<br>
-              &ensp;&ensp;- Review<br>
-              &ensp;&ensp;- Blocked<br>
-              &ensp;&ensp;- Done<br>
-              &ensp;&ensp;&ensp;&ensp;- Nothing moves here unless it is reviewed by the other<br>
-
-              We also has a daily meeting.<br><br>
+              Trello.<br><br>
+              <ul>
+                <li>Product backlog</li>
+                <li>Current sprint</li>
+                <li>Doing</li>
+                <li>Review</li>
+                <li>Blocked</li>
+                <li>Done</li>
+              </ul>
+              We also had a daily meeting to catch up what everyone had done.<br><br>
               <h5>Obstacles</h5>
-              -&ensp;&ensp;Target variable creation
+              Target variable creation
               As I mentioned above, we did not have a target variable, the probability or the likelihood of getting
               a parking ticket.
               We <span class="marker">created one by using three datasets</span>, one that contained the information
@@ -763,11 +776,12 @@
               We had decided to use the number of tickets given, divided by the amount of traffic on the street.
               In this way, <span class="marker">we defined risk RELATIVE to the risk of other streets</span>.
               The formula for estimating the probability for each block on each street was as follows:<br><br>
-              <div class="text-center">
-                <a href="https://www.codecogs.com/eqnedit.php?latex=\textbf{The&space;number&space;of&space;tickets&space;/&space;The&space;number&space;of&space;traffic&space;counts}"
-                  target="_blank"><img
-                    src="https://latex.codecogs.com/gif.latex?\textbf{The&space;number&space;of&space;tickets&space;/&space;The&space;number&space;of&space;traffic&space;counts}"
-                    title="\textbf{The number of tickets / The number of traffic counts}" /></a>
+              <div class="text-center container">
+                <div class="row">
+                  <div class="col-xs-6">
+                    <img src="img/CodeCogsEqn.gif" class="img-fluid">
+                  </div>
+                </div>
               </div><br>
 
               In order to do the calculation, we needed to make sure that <span class="marker">each street</span> in
@@ -829,7 +843,7 @@
       </div>
       <!-- An education is done -->
 
-      <p>&ensp;</p>
+      <!-- <p>&ensp;</p> -->
 
       <!-- An education start -->
       <div class="col-sm-12 mb-2">
@@ -855,7 +869,7 @@
       </div>
       <!-- An education is done -->
 
-      <p>&ensp;</p>
+      <!-- <p>&ensp;</p> -->
 
       <!-- An Education start -->
       <div class="col-sm-12 mb-2">
@@ -895,7 +909,7 @@
       </div>
       <!-- An Education end -->
 
-      <p>&ensp;</p>
+      <!-- <p>&ensp;</p> -->
 
       <!-- An education start -->
       <div class="col-sm-12 mb-2">
