Modified minor layout

--- a/index.html
+++ b/index.html
@@ -824,17 +824,20 @@
                 <p></p>
                 <span class="marker">Curriculum</span><br>
                 8 weeks, 3.5 hours * 4 days/week.<br>
-                1st week: Data Engineering, Modeling, BigData (ETL, DWH, Airflow, Spark)<br>
-                2nd week: Data Visualization (Matplotlib), Data Processing (Duplicated rows, Missing Values, Outliers,
-                Multiple Value Ranges, Non-numerical Data)<br>
-                3rd week: AutoML (Google Cloud, Microsoft Azure), ML Library (sklearn)<br>
-                4th week: MVP, Interpretability, Problem-solving, ML Technics (Bias, Variance, Regularization,
-                etc)<br>
-                5th week: Planning and estimating the work, Data Science Scrum<br>
-                6th week: Team Project<br>
-                7th week: Team Project<br>
-                8th week: Presentation about the team project, <span class="marker"><a href="https://ticket-dodger.com/"
-                    target="_blank">Ticket-Dodger</span></a>
+                <ul>
+                  <li>1st week:</li>Data Engineering, Modeling, BigData (ETL, DWH, Airflow, Spark)
+                  <li>2nd week:</li>Data Visualization (Matplotlib), Data Processing (Duplicated rows, Missing Values,
+                  Outliers,
+                  Multiple Value Ranges, Non-numerical Data)
+                  <li>3rd week:</li>AutoML (Google Cloud, Microsoft Azure), ML Library (sklearn)
+                  <li>4th week:</li>MVP, Interpretability, Problem-solving, ML Technics (Bias, Variance, Regularization,
+                  etc)
+                  <li>5th week:</li>Planning and estimating the work, Data Science Scrum
+                  <li>6th week:</li>Team Project
+                  <li>7th week:</li>Team Project
+                  <li>8th week:</li>Presentation about the team project, <span class="marker"><a
+                      href="https://ticket-dodger.com/" target="_blank">Ticket-Dodger</span></a>
+                </ul>
               </div>
               <p></p>
             </div>
@@ -885,22 +888,16 @@
                   certificate]</a></div>
               <div>
                 <span class="marker">Curriculum</span><br>
-                -&ensp;UNIT 1 Python Programming<br>
-                &ensp;&ensp;Programming Fundamentals, Pandas, Python Packages<br><br>
-                -&ensp;UNIT 2 Working with Data<br>
-                &ensp;&ensp;Importing, Cleaning, Sampling<br><br>
-                -&ensp;UNIT 3 Data Visualization<br>
-                &ensp;&ensp;Matplotlib, Bokeh, Model Visualizations<br><br>
-                -&ensp;UNIT 4 Numerical Models<br>
-                &ensp;&ensp;Linear Regression, Polynomial Regression<br><br>
-                -&ensp;UNIT 5 Classification Models<br>
-                &ensp;&ensp;Logistic Regression, Naive Bayes, Decision Trees<br><br>
-                -&ensp;UNIT 6 Model Validation<br>
-                &ensp;&ensp;Distribution Fitting, Testing Goodness of Fit, Training Models<br><br>
-                -&ensp;UNIT 7 Machine Learning<br>
-                &ensp;&ensp;Intro to Neural Networks, Intro to Random Forests<br><br>
-                -&ensp;UNIT 8 Presenting Data<br>
-                &ensp;&ensp;Storytelling with Data, Project Presentation<br><br>
+                <ul>
+                  <li>UNIT 1 Python Programming</li>Programming Fundamentals, Pandas, Python Packages
+                  <li>UNIT 2 Working with Data</li>Importing, Cleaning, Sampling
+                  <li>UNIT 3 Data Visualization</li>Matplotlib, Bokeh, Model Visualizations
+                  <li>UNIT 4 Numerical Models</li>Linear Regression, Polynomial Regression
+                  <li>UNIT 5 Classification Models</li>Logistic Regression, Naive Bayes, Decision Trees
+                  <li>UNIT 6 Model Validation</li>Distribution Fitting, Testing Goodness of Fit, Training Models
+                  <li>UNIT 7 Machine Learning</li>Intro to Neural Networks, Intro to Random Forests
+                  <li>UNIT 8 Presenting Data</li>Storytelling with Data, Project Presentation
+                </ul>
               </div>
               <p></p>
             </div>
