--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </h1>
         <div class="subheading mb-5">email address:
           <a href="mailto:koheisuzuki808@gmail.com">koheisuzuki808@gmail.com</a>&emsp;|&emsp;
-          <a href="docs/koheisuzuki_resume2020_ver1.0.pdf" target="_blank" id="resume">Download CV</a>
+          <a href="docs/koheisuzuki_resume2020_ver1.2_ML.pdf" target="_blank" id="resume">Download CV</a>
         </div>
         <blockquote class="blockquote blockquote-custom bg-white p-4 shadow rounded">
           <p class="mb-2 mt-2 font-italic">
@@ -151,15 +151,15 @@
           </span></h4>
         <ul>
           <li><span class="marker">Programming Laguage</span>:</li>Python (TensorFlow, PyTroch, Pandas, Numpy,
-          Matplotlib, Sklearn, Jupyter
+          Matplotlib, OpenCV, Sklearn, Jupyter
           Notebook, Tensorforce, SCipy,
-          Flask), C/C++, SQL, Java, Bash
+          Flask, unittest), C/C++, SQL, Java, Bash
           <li><span class="marker">Machine Learning</span>: </li>Computer Vision, NLP, Time Series, Reinforcement
           Learning,
           Classic machine learning
           <li><span class="marker">OS</span>: </li>Ubuntu, MacOS
-          <li><span class="marker">Others</span>: </li>AWS(EC2, DynamoDB, CloudWatch), Github, Algorithms and Data
-          structures
+          <li><span class="marker">Others</span>: </li>AWS(EC2, DynamoDB, CloudWatch), Github, Docker, CircleCI, Scrum,
+          Agile, Algorithms and Data structures, Quantum computing (Dwave-Ocean-SDK)
         </ul>
         </p>
         <div class="social-icons">
